step1 3d refactor
